[package]
name = "focus-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["cargo"] }
directories = "5.0.1"
dotenv = "0.15.0"
tempfile = "3.2.0"
tokio = { version = "1.13.0", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
reqwest = { version = "0.11.6", features = ["json"] }